--- a/SegmentationCode.ipynb
+++ b/SegmentationCode.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b3b3340f",
    "metadata": {},
    "outputs": [],
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "23d6c38b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "AUDIO_FOLDER = \"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/PHEA\" \n",
-    "ANNOTATION_FOLDER = \"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/SelectionTables\"\n",
-    "OUTPUT_FOLDER = \"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/SegmentedAudios\""
+    "AUDIO_FOLDER = \"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/TestInput\" \n",
+    "ANNOTATION_FOLDER = \"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/TestTable\"\n",
+    "OUTPUT_FOLDER = \"D:/_3rd Year Class/1st Sem/Machine Learning/_ForLE/For DataSet/TestOutput\""
    ]
   },
   {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "43ae7f9b",
    "metadata": {},
    "outputs": [],
@@ -89,79 +89,7 @@
    "execution_count": null,
    "id": "508a3b96",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "🎧 Processing: converted_18537.wav\n",
-      "   ↳ Using annotations from: converted_18537.txt\n",
-      "   📋 Annotation types found: ['Unecessary' 'PhilEagle_long' 'PhilEagle_short']\n",
-      "   🚫 Unnecessary regions: 2\n",
-      "   ✅ Valid eagle annotations: 30\n",
-      "   📊 Found 16 eagle segments\n",
-      "   📊 Found 76 potential no-eagle segments\n",
-      "   ⚖️  Selecting 16 no-eagle segments for balance\n",
-      "✅ Saved: EagleMixed/converted_18537_seg0000.wav\n",
-      "✅ Saved: Eagle_short/converted_18537_seg0001.wav\n",
-      "✅ Saved: Eagle_long/converted_18537_seg0002.wav\n",
-      "✅ Saved: EagleMixed/converted_18537_seg0003.wav\n",
-      "✅ Saved: EagleMixed/converted_18537_seg0004.wav\n",
-      "✅ Saved: EagleMixed/converted_18537_seg0005.wav\n",
-      "✅ Saved: EagleMixed/converted_18537_seg0006.wav\n",
-      "✅ Saved: Eagle_long/converted_18537_seg0007.wav\n",
-      "✅ Saved: Eagle_long/converted_18537_seg0008.wav\n",
-      "✅ Saved: Eagle_long/converted_18537_seg0009.wav\n",
-      "✅ Saved: Eagle_long/converted_18537_seg0010.wav\n",
-      "✅ Saved: Eagle_long/converted_18537_seg0011.wav\n",
-      "✅ Saved: Eagle_short/converted_18537_seg0012.wav\n",
-      "✅ Saved: Eagle_long/converted_18537_seg0013.wav\n",
-      "✅ Saved: Eagle_long/converted_18537_seg0014.wav\n",
-      "✅ Saved: Eagle_long/converted_18537_seg0015.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0016.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0017.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0018.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0019.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0020.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0021.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0022.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0023.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0024.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0025.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0026.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0027.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0028.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0029.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0030.wav\n",
-      "✅ Saved: NoEagleSound/converted_18537_seg0031.wav\n",
-      "\n",
-      "📊 Summary for converted_18537.wav:\n",
-      "   • Eagle_long: 9 segments\n",
-      "   • Eagle_short: 2 segments\n",
-      "   • EagleMixed: 5 segments\n",
-      "   • NoEagleSound: 16 segments\n",
-      "   • Total Eagle: 16 segments\n",
-      "   • Total No Eagle: 16 segments\n",
-      "   • Balance: 16/16 (Eagle/NoEagle)\n",
-      "📋 Manifest saved: converted_18537_manifest.csv\n",
-      "\n",
-      "📋 Master manifest saved: master_manifest.csv\n",
-      "\n",
-      "📊 Overall Statistics:\n",
-      "   • Total segments created: 32\n",
-      "   • NoEagleSound: 16 segments\n",
-      "   • Eagle_long: 9 segments\n",
-      "   • EagleMixed: 5 segments\n",
-      "   • Eagle_short: 2 segments\n",
-      "   • Total Eagle: 16 segments\n",
-      "   • Total No Eagle: 16 segments\n",
-      "   • Balance: 50.0% Eagle / 50.0% No Eagle\n",
-      "\n",
-      "🎉 All audio and annotation files segmented successfully!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.makedirs(OUTPUT_FOLDER, exist_ok=True)\n",
     "\n",
@@ -176,6 +104,9 @@
     "\n",
     "# Master manifest to collect all segments\n",
     "all_segments = []\n",
+    "\n",
+    "# CARRY-OVER SYSTEM: Track deficit across files\n",
+    "no_eagle_deficit = 0\n",
     "\n",
     "# ===============================\n",
     "# MAIN LOOP\n",
@@ -250,13 +181,19 @@
     "    \n",
     "    # Process each eagle annotation to create centered segments\n",
     "    eagle_segments = []\n",
-    "    used_regions = []  # Track which time regions we've already used\n",
+    "    processed_annotations = set()  # Track which annotations have been FULLY captured\n",
     "    \n",
     "    if not valid_annots.empty:\n",
-    "        for _, annot in valid_annots.iterrows():\n",
+    "        for idx, annot in valid_annots.iterrows():\n",
     "            annot_start = annot[\"Begin Time (s)\"]\n",
     "            annot_end = annot[\"End Time (s)\"]\n",
     "            annot_type = str(annot[COL_TYPE])\n",
+    "            annot_selection = int(annot['Selection']) if 'Selection' in annot else idx\n",
+    "            \n",
+    "            # Check if this annotation is already fully captured\n",
+    "            if annot_selection in processed_annotations:\n",
+    "                print(f\"   ⏭️  Skipping Selection {annot_selection} (already fully captured)\")\n",
+    "                continue\n",
     "            \n",
     "            # Calculate segment window based on position preference\n",
     "            if WINDOW_POSITION == \"start\":\n",
@@ -282,23 +219,6 @@
     "                print(f\"   ⏭️  Skipping annotation at {annot_start:.2f}s (overlaps unnecessary region)\")\n",
     "                continue\n",
     "            \n",
-    "            # Check if this segment significantly overlaps with already used regions\n",
-    "            overlaps_used = False\n",
-    "            for used_start, used_end in used_regions:\n",
-    "                overlap_start = max(seg_start, used_start)\n",
-    "                overlap_end = min(seg_end, used_end)\n",
-    "                overlap_duration = max(0, overlap_end - overlap_start)\n",
-    "                if overlap_duration > SEGMENT_LENGTH * 0.5:  # More than 50% overlap\n",
-    "                    overlaps_used = True\n",
-    "                    break\n",
-    "            \n",
-    "            if overlaps_used:\n",
-    "                print(f\"   ⏭️  Skipping annotation at {annot_start:.2f}s (overlaps with existing segment)\")\n",
-    "                continue\n",
-    "            \n",
-    "            # Mark this region as used\n",
-    "            used_regions.append((seg_start, seg_end))\n",
-    "            \n",
     "            # Find all annotations that overlap with this segment window\n",
     "            overlapped = valid_annots[\n",
     "                (valid_annots[\"Begin Time (s)\"] < seg_end) &\n",
@@ -310,9 +230,18 @@
     "            types = []\n",
     "            qualities = []\n",
     "            selection_numbers = []\n",
+    "            fully_captured_selections = []  # Track which annotations are FULLY in this segment\n",
     "            \n",
     "            for _, overlap_annot in overlapped.iterrows():\n",
+    "                overlap_start = overlap_annot[\"Begin Time (s)\"]\n",
+    "                overlap_end = overlap_annot[\"End Time (s)\"]\n",
+    "                overlap_selection = int(overlap_annot['Selection']) if 'Selection' in overlap_annot else None\n",
     "                overlap_type = str(overlap_annot[COL_TYPE]).lower()\n",
+    "                \n",
+    "                # Check if this annotation is FULLY contained in the segment\n",
+    "                is_fully_contained = (overlap_start >= seg_start and overlap_end <= seg_end)\n",
+    "                if is_fully_contained and overlap_selection is not None:\n",
+    "                    fully_captured_selections.append(overlap_selection)\n",
     "                \n",
     "                if \"long\" in overlap_type or \"_long\" in overlap_type:\n",
     "                    call_type = \"long\"\n",
@@ -342,7 +271,8 @@
     "                    'call_type': call_type,\n",
     "                    'quality': quality,\n",
     "                    'begin': overlap_annot[\"Begin Time (s)\"],\n",
-    "                    'end': overlap_annot[\"End Time (s)\"]\n",
+    "                    'end': overlap_annot[\"End Time (s)\"],\n",
+    "                    'fully_contained': is_fully_contained\n",
     "                })\n",
     "            \n",
     "            # Determine label\n",
@@ -362,6 +292,10 @@
     "            \n",
     "            label_text = f\"{label_base}_{segment_quality}\"\n",
     "            \n",
+    "            # Mark all fully captured annotations as processed\n",
+    "            for sel in fully_captured_selections:\n",
+    "                processed_annotations.add(sel)\n",
+    "            \n",
     "            eagle_segments.append({\n",
     "                'start': seg_start,\n",
     "                'end': seg_end,\n",
@@ -370,18 +304,28 @@
     "                'quality': segment_quality,\n",
     "                'selection_numbers': selection_numbers,\n",
     "                'annotation_details': annotation_details,\n",
+    "                'fully_captured_selections': fully_captured_selections,\n",
     "                'trigger_annotation': {\n",
     "                    'start': annot_start,\n",
     "                    'end': annot_end,\n",
-    "                    'type': annot_type\n",
+    "                    'type': annot_type,\n",
+    "                    'selection': annot_selection\n",
     "                }\n",
     "            })\n",
+    "            \n",
+    "            # Log what was captured\n",
+    "            fully_msg = f\" (fully captured: {', '.join(map(str, fully_captured_selections))})\" if fully_captured_selections else \" (partial captures only)\"\n",
+    "            print(f\"   ✅ Created segment at {seg_start:.2f}s for Selection {annot_selection}{fully_msg}\")\n",
     "    \n",
     "    print(f\"   📊 Eagle segments created: {len(eagle_segments)}\")\n",
     "    \n",
-    "    # Create equal number of NoEagleSound segments\n",
+    "    # CARRY-OVER SYSTEM: Calculate total needed including deficit\n",
+    "    num_no_eagle_needed = len(eagle_segments) + no_eagle_deficit\n",
+    "    print(f\"   📊 Deficit from previous files: {no_eagle_deficit}\")\n",
+    "    print(f\"   ⚖️  Total no-eagle segments needed: {num_no_eagle_needed}\")\n",
+    "    \n",
+    "    # Create no-eagle segments\n",
     "    no_eagle_segments = []\n",
-    "    num_no_eagle_needed = len(eagle_segments)\n",
     "    \n",
     "    if num_no_eagle_needed > 0:\n",
     "        # Generate random no-eagle segments\n",
@@ -435,6 +379,15 @@
     "            })\n",
     "        \n",
     "        print(f\"   📊 No-eagle segments created: {len(no_eagle_segments)}\")\n",
+    "        \n",
+    "        # CARRY-OVER SYSTEM: Update deficit\n",
+    "        if len(no_eagle_segments) >= num_no_eagle_needed:\n",
+    "            no_eagle_deficit = 0\n",
+    "            print(f\"   ✅ Deficit cleared! All {num_no_eagle_needed} no-eagle segments created.\")\n",
+    "        else:\n",
+    "            no_eagle_deficit = num_no_eagle_needed - len(no_eagle_segments)\n",
+    "            print(f\"   ⚠️  Could only create {len(no_eagle_segments)}/{num_no_eagle_needed} segments.\")\n",
+    "            print(f\"   ⚠️  Carrying over deficit of {no_eagle_deficit} to next file.\")\n",
     "    \n",
     "    # Save all segments\n",
     "    all_selected_segments = eagle_segments + no_eagle_segments\n",
@@ -484,12 +437,19 @@
     "        selection_list_str = ', '.join(map(str, selection_numbers)) if selection_numbers else 'None'\n",
     "        \n",
     "        individual_times = []\n",
-    "        if label_base == \"EagleMixed\" and annotation_details:\n",
+    "        if annotation_details:\n",
     "            for detail in annotation_details:\n",
     "                sel_num = detail.get('selection', '?')\n",
-    "                individual_times.append(\n",
-    "                    f\"Sel{sel_num}({detail['call_type']}): {detail['begin']:.3f}-{detail['end']:.3f}s\"\n",
-    "                )\n",
+    "                fully_contained = detail.get('fully_contained', False)\n",
+    "                containment_marker = \"✓\" if fully_contained else \"⚠\"\n",
+    "                if label_base == \"EagleMixed\":\n",
+    "                    individual_times.append(\n",
+    "                        f\"Sel{sel_num}({detail['call_type']}){containment_marker}: {detail['begin']:.3f}-{detail['end']:.3f}s\"\n",
+    "                    )\n",
+    "                else:\n",
+    "                    individual_times.append(\n",
+    "                        f\"Sel{sel_num}{containment_marker}: {detail['begin']:.3f}-{detail['end']:.3f}s\"\n",
+    "                    )\n",
     "        individual_times_str = '; '.join(individual_times) if individual_times else 'N/A'\n",
     "        \n",
     "        segment_info = {\n",
@@ -525,6 +485,12 @@
     "        if count > 0:\n",
     "            print(f\"   • {label}: {count} segments\")\n",
     "    \n",
+    "    eagle_count = len(eagle_segments)\n",
+    "    no_eagle_count = len(no_eagle_segments)\n",
+    "    print(f\"   • Total Eagle: {eagle_count} segments\")\n",
+    "    print(f\"   • Total No Eagle: {no_eagle_count} segments\")\n",
+    "    print(f\"   • Balance for this file: {eagle_count}/{no_eagle_count} (Eagle/NoEagle)\")\n",
+    "    \n",
     "    # Save per-file manifest\n",
     "    if file_segments:\n",
     "        file_manifest_df = pd.DataFrame(file_segments)\n",
@@ -559,9 +525,16 @@
     "    print(f\"\\n   • Total Eagle: {eagle_total} segments\")\n",
     "    print(f\"   • Total No Eagle: {no_eagle_total} segments\")\n",
     "    \n",
-    "    if eagle_total + no_eagle_total > 0:\n",
-    "        eagle_pct = (eagle_total / (eagle_total + no_eagle_total)) * 100\n",
-    "        print(f\"   • Balance: {eagle_pct:.1f}% Eagle / {100-eagle_pct:.1f}% No Eagle\")\n",
+    "    # Final deficit warning\n",
+    "    if no_eagle_deficit > 0:\n",
+    "        print(f\"\\n   ⚠️  FINAL DEFICIT: {no_eagle_deficit} no-eagle segments still needed!\")\n",
+    "        print(f\"   ⚠️  Dataset is imbalanced by {no_eagle_deficit} segments.\")\n",
+    "        actual_balance = (eagle_total / (eagle_total + no_eagle_total)) * 100 if (eagle_total + no_eagle_total) > 0 else 0\n",
+    "        print(f\"   • Actual Balance: {actual_balance:.1f}% Eagle / {100-actual_balance:.1f}% No Eagle\")\n",
+    "    else:\n",
+    "        if eagle_total + no_eagle_total > 0:\n",
+    "            eagle_pct = (eagle_total / (eagle_total + no_eagle_total)) * 100\n",
+    "            print(f\"   ✅ Perfect Balance: {eagle_pct:.1f}% Eagle / {100-eagle_pct:.1f}% No Eagle\")\n",
     "\n",
     "print(\"\\n🎉 All audio files segmented successfully!\")"
    ]
