feat(segmentation): switch to center alignment and enable overlapping segments

--- a/SegmentationCode.ipynb
+++ b/SegmentationCode.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "43ae7f9b",
    "metadata": {},
    "outputs": [],
@@ -71,9 +71,9 @@
     "COL_TYPE = \"Type\"\n",
     "COL_QUALITY = \"Quality\"\n",
     "\n",
-    "# New setting: How to position the 5-second window relative to the annotation\n",
-    "# Options: \"start\", \"center\", \"end\"\n",
-    "WINDOW_POSITION = \"start\"  # Start the 5-sec window at the annotation's Begin Time"
+    "# MODIFICATION 1: Switch to Center\n",
+    "# This puts the \"Target\" bird in the middle, providing context on both sides.\n",
+    "WINDOW_POSITION = \"center\""
    ]
   },
   {
@@ -190,10 +190,14 @@
     "            annot_type = str(annot[COL_TYPE])\n",
     "            annot_selection = int(annot['Selection']) if 'Selection' in annot else idx\n",
     "            \n",
-    "            # Check if this annotation is already fully captured\n",
-    "            if annot_selection in processed_annotations:\n",
-    "                print(f\"   ⏭️  Skipping Selection {annot_selection} (already fully captured)\")\n",
-    "                continue\n",
+    "            # =========================================================\n",
+    "            # MODIFICATION 2: DISABLE SKIPPING\n",
+    "            # We want every annotation to have its own centered segment,\n",
+    "            # even if it overlaps with a neighbor.\n",
+    "            # =========================================================\n",
+    "            # if annot_selection in processed_annotations:\n",
+    "            #     print(f\"   ⏭️  Skipping Selection {annot_selection} (already fully captured)\")\n",
+    "            #     continue\n",
     "            \n",
     "            # Calculate segment window based on position preference\n",
     "            if WINDOW_POSITION == \"start\":\n",
@@ -292,7 +296,7 @@
     "            \n",
     "            label_text = f\"{label_base}_{segment_quality}\"\n",
     "            \n",
-    "            # Mark all fully captured annotations as processed\n",
+    "            # Mark fully captured annotations (Used for stats, not skipping now)\n",
     "            for sel in fully_captured_selections:\n",
     "                processed_annotations.add(sel)\n",
     "            \n",
