feat(segmentation): add hybrid centered windowing with overlap group tracking
Implements smart segmentation that centers eagle calls while tracking overlapping
segments via group IDs to prevent ML data leakage. Balances data diversity with
redundancy control through configurable overlap thresholds (80%) and minimum gaps (1s).

--- a/SegmentationCode.ipynb
+++ b/SegmentationCode.ipynb
@@ -71,9 +71,10 @@
     "COL_TYPE = \"Type\"\n",
     "COL_QUALITY = \"Quality\"\n",
     "\n",
-    "# MODIFICATION 1: Switch to Center\n",
-    "# This puts the \"Target\" bird in the middle, providing context on both sides.\n",
-    "WINDOW_POSITION = \"center\""
+    "# HYBRID APPROACH SETTINGS\n",
+    "WINDOW_POSITION = \"center\"  # Center the call for better CNN context\n",
+    "MIN_ANNOTATION_GAP = 1.0  # Minimum seconds between annotations to create separate segments\n",
+    "OVERLAP_THRESHOLD = 0.8  # Only skip if >80% overlap (vs 50% before)"
    ]
   },
   {
@@ -107,6 +108,30 @@
     "\n",
     "# CARRY-OVER SYSTEM: Track deficit across files\n",
     "no_eagle_deficit = 0\n",
+    "\n",
+    "# Track segment groups for train/test splitting\n",
+    "segment_group_id = 0\n",
+    "\n",
+    "# ===============================\n",
+    "# HELPER FUNCTIONS\n",
+    "# ===============================\n",
+    "def calculate_overlap(start1, end1, start2, end2):\n",
+    "    \"\"\"Calculate the overlap ratio between two time ranges\"\"\"\n",
+    "    overlap_start = max(start1, start2)\n",
+    "    overlap_end = min(end1, end2)\n",
+    "    overlap_duration = max(0, overlap_end - overlap_start)\n",
+    "    \n",
+    "    segment1_duration = end1 - start1\n",
+    "    segment2_duration = end2 - start2\n",
+    "    \n",
+    "    if segment1_duration == 0 or segment2_duration == 0:\n",
+    "        return 0\n",
+    "    \n",
+    "    # Return the maximum overlap ratio\n",
+    "    ratio1 = overlap_duration / segment1_duration\n",
+    "    ratio2 = overlap_duration / segment2_duration\n",
+    "    \n",
+    "    return max(ratio1, ratio2)\n",
     "\n",
     "# ===============================\n",
     "# MAIN LOOP\n",
@@ -181,25 +206,29 @@
     "    \n",
     "    # Process each eagle annotation to create centered segments\n",
     "    eagle_segments = []\n",
-    "    processed_annotations = set()  # Track which annotations have been FULLY captured\n",
+    "    created_segments = []  # Track all created segments for overlap detection\n",
     "    \n",
     "    if not valid_annots.empty:\n",
-    "        for idx, annot in valid_annots.iterrows():\n",
+    "        # Sort annotations by start time\n",
+    "        valid_annots_sorted = valid_annots.sort_values('Begin Time (s)')\n",
+    "        \n",
+    "        for idx, annot in valid_annots_sorted.iterrows():\n",
     "            annot_start = annot[\"Begin Time (s)\"]\n",
     "            annot_end = annot[\"End Time (s)\"]\n",
     "            annot_type = str(annot[COL_TYPE])\n",
     "            annot_selection = int(annot['Selection']) if 'Selection' in annot else idx\n",
     "            \n",
-    "            # =========================================================\n",
-    "            # MODIFICATION 2: DISABLE SKIPPING\n",
-    "            # We want every annotation to have its own centered segment,\n",
-    "            # even if it overlaps with a neighbor.\n",
-    "            # =========================================================\n",
-    "            # if annot_selection in processed_annotations:\n",
-    "            #     print(f\"   ⏭️  Skipping Selection {annot_selection} (already fully captured)\")\n",
-    "            #     continue\n",
+    "            # Check if too close to previous annotation\n",
+    "            if len(valid_annots_sorted) > 1:\n",
+    "                prev_annots = valid_annots_sorted[valid_annots_sorted['Begin Time (s)'] < annot_start]\n",
+    "                if not prev_annots.empty:\n",
+    "                    prev_end = prev_annots.iloc[-1]['End Time (s)']\n",
+    "                    gap = annot_start - prev_end\n",
+    "                    if gap < MIN_ANNOTATION_GAP and gap > 0:\n",
+    "                        print(f\"   ⏭️  Skipping Selection {annot_selection} (too close to previous: {gap:.2f}s gap)\")\n",
+    "                        continue\n",
     "            \n",
-    "            # Calculate segment window based on position preference\n",
+    "            # Calculate segment window - CENTERED\n",
     "            if WINDOW_POSITION == \"start\":\n",
     "                seg_start = annot_start\n",
     "                seg_end = min(annot_start + SEGMENT_LENGTH, total_duration)\n",
@@ -207,6 +236,10 @@
     "                annot_mid = (annot_start + annot_end) / 2\n",
     "                seg_start = max(0, annot_mid - SEGMENT_LENGTH / 2)\n",
     "                seg_end = min(seg_start + SEGMENT_LENGTH, total_duration)\n",
+    "                # Adjust if we hit the end\n",
+    "                if seg_end >= total_duration:\n",
+    "                    seg_end = total_duration\n",
+    "                    seg_start = max(0, seg_end - SEGMENT_LENGTH)\n",
     "            else:  # \"end\"\n",
     "                seg_end = annot_end\n",
     "                seg_start = max(0, seg_end - SEGMENT_LENGTH)\n",
@@ -223,6 +256,29 @@
     "                print(f\"   ⏭️  Skipping annotation at {annot_start:.2f}s (overlaps unnecessary region)\")\n",
     "                continue\n",
     "            \n",
+    "            # Check overlap with already created segments (SMART SKIPPING)\n",
+    "            skip_overlap = False\n",
+    "            overlapping_group = None\n",
+    "            for existing_seg in created_segments:\n",
+    "                overlap_ratio = calculate_overlap(seg_start, seg_end, \n",
+    "                                                  existing_seg['start'], existing_seg['end'])\n",
+    "                if overlap_ratio > OVERLAP_THRESHOLD:\n",
+    "                    skip_overlap = True\n",
+    "                    print(f\"   ⏭️  Skipping Selection {annot_selection} ({overlap_ratio*100:.0f}% overlap with existing segment)\")\n",
+    "                    break\n",
+    "                elif overlap_ratio > 0.3:  # Moderate overlap - same group for splitting\n",
+    "                    overlapping_group = existing_seg.get('group_id')\n",
+    "            \n",
+    "            if skip_overlap:\n",
+    "                continue\n",
+    "            \n",
+    "            # Assign group ID for train/test splitting\n",
+    "            if overlapping_group is None:\n",
+    "                current_group_id = segment_group_id\n",
+    "                segment_group_id += 1\n",
+    "            else:\n",
+    "                current_group_id = overlapping_group\n",
+    "            \n",
     "            # Find all annotations that overlap with this segment window\n",
     "            overlapped = valid_annots[\n",
     "                (valid_annots[\"Begin Time (s)\"] < seg_end) &\n",
@@ -234,7 +290,7 @@
     "            types = []\n",
     "            qualities = []\n",
     "            selection_numbers = []\n",
-    "            fully_captured_selections = []  # Track which annotations are FULLY in this segment\n",
+    "            fully_captured_selections = []\n",
     "            \n",
     "            for _, overlap_annot in overlapped.iterrows():\n",
     "                overlap_start = overlap_annot[\"Begin Time (s)\"]\n",
@@ -279,28 +335,31 @@
     "                    'fully_contained': is_fully_contained\n",
     "                })\n",
     "            \n",
-    "            # Determine label\n",
-    "            unique_types = list(set(types))\n",
-    "            if len(unique_types) > 1:\n",
-    "                label_base = \"EagleMixed\"\n",
-    "            elif \"long\" in unique_types:\n",
+    "            # Determine label based on PRIMARY annotation (the trigger)\n",
+    "            annot_type_lower = annot_type.lower()\n",
+    "            if \"long\" in annot_type_lower:\n",
     "                label_base = \"Eagle_long\"\n",
-    "            elif \"short\" in unique_types:\n",
+    "            elif \"short\" in annot_type_lower:\n",
     "                label_base = \"Eagle_short\"\n",
     "            else:\n",
     "                label_base = \"EagleSound\"\n",
     "            \n",
-    "            # Determine quality (use highest)\n",
-    "            quality_order = {\"High\": 3, \"Medium\": 2, \"Low\": 1}\n",
-    "            segment_quality = max(qualities, key=lambda q: quality_order.get(q, 0))\n",
+    "            # If multiple different types, mark as mixed\n",
+    "            unique_types = list(set(types))\n",
+    "            if len(unique_types) > 1:\n",
+    "                label_base = \"EagleMixed\"\n",
+    "            \n",
+    "            # Determine quality (use quality of PRIMARY annotation)\n",
+    "            if has_quality:\n",
+    "                segment_quality = str(annot[COL_QUALITY]).strip()\n",
+    "                if segment_quality.lower() not in [\"high\", \"medium\", \"low\"]:\n",
+    "                    segment_quality = \"Medium\"\n",
+    "            else:\n",
+    "                segment_quality = \"Medium\"\n",
     "            \n",
     "            label_text = f\"{label_base}_{segment_quality}\"\n",
     "            \n",
-    "            # Mark fully captured annotations (Used for stats, not skipping now)\n",
-    "            for sel in fully_captured_selections:\n",
-    "                processed_annotations.add(sel)\n",
-    "            \n",
-    "            eagle_segments.append({\n",
+    "            segment_info = {\n",
     "                'start': seg_start,\n",
     "                'end': seg_end,\n",
     "                'label_base': label_base,\n",
@@ -309,17 +368,22 @@
     "                'selection_numbers': selection_numbers,\n",
     "                'annotation_details': annotation_details,\n",
     "                'fully_captured_selections': fully_captured_selections,\n",
+    "                'group_id': current_group_id,\n",
     "                'trigger_annotation': {\n",
     "                    'start': annot_start,\n",
     "                    'end': annot_end,\n",
     "                    'type': annot_type,\n",
     "                    'selection': annot_selection\n",
     "                }\n",
-    "            })\n",
+    "            }\n",
+    "            \n",
+    "            eagle_segments.append(segment_info)\n",
+    "            created_segments.append(segment_info)\n",
     "            \n",
     "            # Log what was captured\n",
-    "            fully_msg = f\" (fully captured: {', '.join(map(str, fully_captured_selections))})\" if fully_captured_selections else \" (partial captures only)\"\n",
-    "            print(f\"   ✅ Created segment at {seg_start:.2f}s for Selection {annot_selection}{fully_msg}\")\n",
+    "            fully_msg = f\" (fully captured: {', '.join(map(str, fully_captured_selections))})\" if fully_captured_selections else \" (partial)\"\n",
+    "            overlap_msg = f\" [Group {current_group_id}]\" if overlapping_group is not None else \"\"\n",
+    "            print(f\"   ✅ Created segment at {seg_start:.2f}-{seg_end:.2f}s for Selection {annot_selection}{fully_msg}{overlap_msg}\")\n",
     "    \n",
     "    print(f\"   📊 Eagle segments created: {len(eagle_segments)}\")\n",
     "    \n",
@@ -332,7 +396,6 @@
     "    no_eagle_segments = []\n",
     "    \n",
     "    if num_no_eagle_needed > 0:\n",
-    "        # Generate random no-eagle segments\n",
     "        attempts = 0\n",
     "        max_attempts = num_no_eagle_needed * 10\n",
     "        \n",
@@ -379,8 +442,10 @@
     "            no_eagle_segments.append({\n",
     "                'start': random_start,\n",
     "                'end': random_end,\n",
-    "                'label': \"NoEagleSound\"\n",
+    "                'label': \"NoEagleSound\",\n",
+    "                'group_id': segment_group_id\n",
     "            })\n",
+    "            segment_group_id += 1\n",
     "        \n",
     "        print(f\"   📊 No-eagle segments created: {len(no_eagle_segments)}\")\n",
     "        \n",
@@ -399,6 +464,7 @@
     "    for segment_data in all_selected_segments:\n",
     "        start = segment_data['start']\n",
     "        end = segment_data['end']\n",
+    "        group_id = segment_data['group_id']\n",
     "        \n",
     "        if 'label_full' in segment_data:\n",
     "            # Eagle segment\n",
@@ -468,11 +534,14 @@
     "            'segment_duration': round(end - start, 3),\n",
     "            'trigger_annotation_start': round(trigger['start'], 3) if trigger else 'N/A',\n",
     "            'trigger_annotation_end': round(trigger['end'], 3) if trigger else 'N/A',\n",
+    "            'trigger_selection': trigger['selection'] if trigger else 'N/A',\n",
     "            'num_annotations': len(annotation_details),\n",
     "            'selection_numbers': selection_list_str,\n",
     "            'annotation_types': '; '.join([a['type'] for a in annotation_details]) if annotation_details else 'None',\n",
     "            'annotation_times': '; '.join([f\"{a['begin']:.3f}-{a['end']:.3f}\" for a in annotation_details]) if annotation_details else 'None',\n",
-    "            'individual_call_details': individual_times_str\n",
+    "            'individual_call_details': individual_times_str,\n",
+    "            'overlap_group_id': group_id,  # For train/test splitting\n",
+    "            'window_position': WINDOW_POSITION\n",
     "        }\n",
     "        \n",
     "        file_segments.append(segment_info)\n",
@@ -480,8 +549,8 @@
     "        \n",
     "        seg_idx += 1\n",
     "        \n",
-    "        trigger_info = f\"triggered by {trigger['start']:.2f}s\" if trigger else \"random\"\n",
-    "        print(f\"✅ Saved: {label_text}/{filename} ({trigger_info}, Selections: {selection_list_str})\")\n",
+    "        trigger_info = f\"triggered by Sel{trigger['selection']}\" if trigger else \"random\"\n",
+    "        print(f\"✅ Saved: {label_text}/{filename} ({trigger_info}, Group {group_id})\")\n",
     "    \n",
     "    # Print summary\n",
     "    print(f\"\\n📊 Summary for {audio_file}:\")\n",
@@ -512,6 +581,7 @@
     "    \n",
     "    print(f\"\\n📊 Overall Statistics:\")\n",
     "    print(f\"   • Total segments created: {len(all_segments)}\")\n",
+    "    print(f\"   • Total overlap groups: {master_manifest_df['overlap_group_id'].nunique()}\")\n",
     "    \n",
     "    print(f\"\\n   Eagle segments by quality:\")\n",
     "    for quality in [\"High\", \"Medium\", \"Low\"]:\n",
@@ -539,6 +609,12 @@
     "        if eagle_total + no_eagle_total > 0:\n",
     "            eagle_pct = (eagle_total / (eagle_total + no_eagle_total)) * 100\n",
     "            print(f\"   ✅ Perfect Balance: {eagle_pct:.1f}% Eagle / {100-eagle_pct:.1f}% No Eagle\")\n",
+    "    \n",
+    "    # Important note about train/test splitting\n",
+    "    print(f\"\\n💡 IMPORTANT NOTE FOR ML TRAINING:\")\n",
+    "    print(f\"   • Use 'overlap_group_id' for stratified splitting\")\n",
+    "    print(f\"   • This ensures overlapping segments stay together in train/val/test\")\n",
+    "    print(f\"   • Prevents data leakage between splits\")\n",
     "\n",
     "print(\"\\n🎉 All audio files segmented successfully!\")"
    ]
